Working on ROS workspace overlay installation
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@26711 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros/install
+++ b/ros/install
@@ -18,3 +18,26 @@ then
 
     rosdep update
 fi
+
+TUE_SYSTEM_DIR=~/ros/$TUE_ROS_DISTRO/system
+
+if [ ! -f $TUE_SYSTEM_DIR/devel/setup.bash ]
+then
+    mkdir -p $TUE_SYSTEM_DIR/src
+    sudo apt-get install g++
+    cd $TUE_SYSTEM_DIR
+    catkin_make
+    source $TUE_SYSTEM_DIR/devel/setup.bash
+fi
+
+TUE_DEV_DIR=~/ros/$TUE_ROS_DISTRO/dev
+
+if [ ! -f $TUE_DEV_DIR/devel/setup.bash ]
+then
+    mkdir -p $TUE_DEV_DIR/src
+    sudo apt-get install g++
+    cd $TUE_DEV_DIR
+    catkin_make
+    source $TUE_DEV_DIR/devel/setup.bash
+fi
+
